@@ -13,5 +13,12 @@ setup(name='bzr',
       url='http://www.bazaar-ng.org/',
       description='Friendly distributed version control system',
       license='GNU GPL v2',
-      packages=['bzrlib'],
+      packages=['bzrlib',
+                'bzrlib.plugins',
+                'bzrlib.plugins.changeset',
+                'bzrlib.selftest',
+                'bzrlib.util',
+                'bzrlib.util.elementtree',
+                'bzrlib.util.effbot.org',
+                'bzrlib.util.urlgrabber'],
       scripts=['bzr'])
